Backend/src/main/java/com/example/backend/errors/GraphQLExceptionHandler.java
package com.example.backend.errors;

import graphql.GraphQLException;
import graphql.kickstart.spring.error.ThrowableGraphQLError;
import org.springframework.stereotype.Component;
import org.springframework.web.bind.annotation.ExceptionHandler;

@Component
public class GraphQLExceptionHandler {

    @ExceptionHandler(GraphQLException.class)
    public ThrowableGraphQLError handleGraphQlException(GraphQLException e){
        return new ThrowableGraphQLError(e);
    }
}
